--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@heroicons/react": "^1.0.4",
     "date-fns": "^2.24.0",
     "dayjs": "^1.10.7",
+    "geolib": "^3.3.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.17",
     "react-responsive": "^9.0.0-beta.4",
     "tailwind-scrollbar-hide": "^1.0.3"
   },
